traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: reassignment to val
  fonctionTest=false
              ^Snake:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:33: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^Snake:35: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return false
        ^Snake:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:38: warning: enclosing method fonctionTest has result type Unit: return value discarded
      return false
      ^Snake:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:42: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return false
    ^